cmake_minimum_required(VERSION 3.29)
project(Bases_de_la_programacion_en_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(Bases_de_la_programacion_en_C__
    "Declaración de variables.cpp"
    "Instrucciones de pruebas y operadores.cpp"
        "Instrucciones de bucle.cpp"
        "Arrays.cpp"
        "Funciones y prototipos.cpp"
        "Punteros.cpp"
        "Referencias.cpp"
        "Constantes.cpp")
